# apollo

./: .gitignore  APOLLO_DESIGN.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPILATION_GUIDE.md  COPYRIGHT  HOWTO.md  LICENSE  LICENSE-MIT  README  README.md  apollo-config.cmake.in  apollo-config.h.in  apollo.pc.in  camomilla.py  data  go  go.hard  run  run.feedback  run.lulesh.tau  run.synben  sosd.cleanup  sosd.kill
apollo/: pipeline.py
apollo/cmd/: __init__.py  features.py  gen.py  model.py  regression.py
archive/: find_big_git_blobs.py  run.lulesh  sos  sosd.start
archive/sos_python/: controller.py  new.controller.py  simulator.py
artemis/: __init__.py  pipeline.py
artemis/cmd/: confusion.py  features.py  gen.py  interactive.py  model.py  regression.py  time.py
artemis/codegen/: __init__.py
artemis/transformers/: __init__.py
cmake/: ApolloProjectMacros.cmake  FindAPOLLO.cmake  FindCaliper.cmake  FindSOS.cmake  PreventInSourceBuilds.cmake
data/: analysis.ipynb  common_routines.ipynb  run_trace_analysis.py
data/jpnotebooks/: common_routines.ipynb
data/notebooks/: analysis.ipynb
docs/: Makefile  apollo_workflow.md  apollo_workflow.pptx  calc.needs.lulesh.sh  conf.py  index.rst  pseudo.API.txt
examples/: CMakeLists.txt
examples/addvect/: CMakeLists.txt  addvect.cpp  addvectLoops.h  cali.query  memoryManager.hpp
examples/api/: mockup.cpp
examples/dotprod/: CMakeLists.txt  dotprod.cpp  dotprod.hpp  simple.cpp
examples/lulesh_apollo/: CMakeLists.txt
examples/lulesh_apollo/RAJA/: CMakeLists.txt  lulesh-init.cpp  lulesh-util.cpp  lulesh-viz.cpp  lulesh.cpp  lulesh.hpp  luleshMemory.hpp  luleshPolicy.hpp  lulesh_ptr.hpp  lulesh_stl.hpp  lulesh_tuple.hpp
examples/lulesh_apollo/baseline/: CMakeLists.txt  lulesh-init.cpp  lulesh-util.cpp  lulesh-viz.cpp  lulesh.cpp  lulesh.hpp
examples/omp_print/: CMakeLists.txt  loopDefinitions.h  omp_print.c
examples/rajaben/: CMakeLists.txt  memoryManager.h  rajaben.cpp
examples/synben/: CMakeLists.txt  synben.cpp
examples/wave_eqn/: .gitignore  CMakeLists.txt  TAU.Makefile  go.sh  wave_eqn.cpp
include/apollo/: Apollo.h  Config.h  Dataset.h  Explorable.h  Feature.h  Logging.h  Macros.h  Model.h  ModelFactory.h  ModelWrapper.h  PolicyChooser.h  PolicyModel.h  Region.h  Timer.h  TimingModel.h
include/util/: Color.h  Debug.h  HashableTuples.h
jobs/: .gitignore  002_0027_lulesh.sh  002_lulesh.sh  09_interactive_sourceme.sh  ALL.lulesh_variants.sh  APOLLO.modelLearned  APOLLO.modelRoundRobin  GUIDE.0008.cleverleaf.sh  SCALE.0027.lulesh.sh  SCALE.0064.lulesh.sh  WATCH.0008.cleverleaf.sh  WATCH.0128.cleverleaf.sh  cleaf_states_5.in  cleaf_test.in  cleaf_triple_pt.in  cleaf_triple_pt_100.in  cleaf_triple_pt_12.in  cleaf_triple_pt_2.in  cleaf_triple_pt_20.in  cleaf_triple_pt_25.in  cleaf_triple_pt_50.in  cleaf_triple_pt_500.in  cleaf_triple_pt_500_viz.in  common_cali.sh  common_copy_files.sh  common_launch_sos.sh  common_parting.sh  common_setenv.sh  common_spack.sh  common_srun_cmds.sh  common_unsetenv.sh  configure_clean_env.sh  end.emailresults.sh  job.blank.sh  job.compare.0001.cleverleaf.sh  job.compare.0008.cleverleaf-viz.sh  job.compare.0008.cleverleaf.sh  job.compare.0016.cleverleaf.sh  job.exhaustive.0001-1of2.cleverleaf.sh  job.exhaustive.0001-2of2.cleverleaf.sh  (+33 more)
jobs/archive/: job.guide.0008.cleverleaf.sh  slurm-2950904.out  slurm-2950959.out  slurm-3132410.out  slurm-3132411.out  slurm-3132603.out  slurm-3138296.out  slurm-3138297.out  slurm-3139616.out  slurm-3139845.out  slurm-3174685.out  slurm-3174723.out  slurm-3201027.out  slurm-3292332.out  slurm-3292375.out  slurm-3310471.out  slurm-3310480.out  slurm-3310906.out  slurm-3311182.out  slurm-3319465.out  (+15 more)
rlsl/: __init__.py  pipeline.py
src/: Apollo.cpp  Apollo.h  Apollo.hpp  CMakeLists.txt  Config.cpp  Dataset.cpp  Explorable.cpp  Feature.cpp  Model.cpp  ModelFactory.cpp  ModelWrapper.cpp  Region.cpp
src/Apollo/: Region.h
src/connectors/kokkos/: kokkos-connector.cpp
src/connectors/kokkos/include/impl/: Kokkos_Profiling_C_Interface.h  Kokkos_Profiling_DeviceInfo.hpp  Kokkos_Profiling_Interface.hpp
src/exec/: 2DwSequential.h  example_synthetic_raja_app.cpp  raja_apollo_forall_impl.hpp  raja_apollo_policy.hpp
src/helpers/: ErrorHandling.h  OutputFormatter.cpp  OutputFormatter.h  Parser.cpp  Parser.h  TimeTrace.h
src/models/: CMakeLists.txt  DatasetMap.cpp  DecisionTree.cpp  Optimal.cpp  PolicyNet.cpp  Python.cpp  Random.cpp  RandomForest.cpp  RegressionTree.cpp  RoundRobin.cpp  Sequential.cpp  Static.cpp  python.cpp  random.cpp  sequential.cpp
src/models/impl/: DecisionTreeImpl.cpp  DecisionTreeImpl.h  RandomForestImpl.cpp  RandomForestImpl.h
src/models/preprocessing/: Preprocessing.cpp  Preprocessing.h
src/python/: .gitignore  SQL.CREATE.apolloView  SQL.CREATE.indexApollo  SQL.CREATE.viewApollo  SQL.sanityCheck  apollo_example.py  apollo_toolkit.py  controller.py  debug_controller.sh  decorator.py  graph.sh  meta_row_to_col.py  ml.py  mytree.json  new.controller.py  perf_full_table.py  prev_rules.json  rajaben.controller.py  simulator.py  sos_sql.py  ssos.py  synben.controller.py  test.py  test_sos.py
src/python/analysis/: analyze-exhaustive.py  analyze-traces.py  dtree2dot.py  plot-trace.py  rfc2dot.py  rtree2dot.py  run-exhaustive.py
src/python/apollo/: __init__.py  config.py  debug.py  guide.py  query.py  trees.py  utils.py
src/python/examples/: kripke_sample.csv  perf_full_table.py  standalone_simulator.py  synben.controller.py  test_join.py
src/python/modeling/: create-dataset.py
src/python/output/models/: step.0.decisiontree.json
src/timers/: TimerCudaAsync.cpp  TimerCudaAsync.h  TimerHipAsync.cpp  TimerHipAsync.h  TimerSync.cpp  TimerSync.h
src/tools/: CMakeLists.txt  chkmodel.cpp
test/: ApolloClass.h  CMakeLists.txt  apollo-overhead.cpp  apollo-test-mpi.cpp  apollo-test-simple.cpp  apollo-test.cpp  apollo-test.h  build-apollo-overhead.sh  build-apollo-test.sh  build-test-cuda.sh  build-test-hip.sh  main.cpp  omp_test.c  run.all.tests.sourceme  sosd.init.sh  sosd.stop.sh  test-cuda.cpp  test-hip.cpp
(+53 files in other folders)
